agregue los titulos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <main>
         <div class="main">
+            <h1>inicio de la guerrra</h1>
             <img src="/img/img1.webp" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nam fugiat, maxime neque repudiandae doloremque nemo. Vitae recusandae delectus inventore esse officiis cum culpa consequuntur, dolor cumque, veniam officia deserunt.</p>
         </div>
