--- a/html/guerra.html
+++ b/html/guerra.html
@@ -16,6 +16,7 @@
     </header>
     <main>
         <div class="main__guerra">
+            <h1>segunda guerra mundial la gana estados unidos de america</h1>
             <img src="/img/img2.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nam fugiat, maxime neque repudiandae doloremque nemo. Vitae recusandae delectus inventore esse officiis cum culpa consequuntur, dolor cumque, veniam officia deserunt.</p>
         </div>
